Fix font size / alignment of timestamps in enhanced recent changes
font-family: monospace; causes the timestamps to have a smaller font size,
but font-family: monospace, monospace; doesn't.

Bug: T170010

--- a/resources/src/mediawiki.special/mediawiki.special.changeslist.enhanced.css
+++ b/resources/src/mediawiki.special/mediawiki.special.changeslist.enhanced.css
@@ -16,11 +16,11 @@ table.mw-enhanced-rc td {
 
 td.mw-enhanced-rc {
 	white-space: nowrap;
-	font-family: monospace;
+	font-family: monospace, monospace;
 }
 
 .mw-enhanced-rc-time {
-	font-family: monospace;
+	font-family: monospace, monospace;
 }
 
 table.mw-enhanced-rc td.mw-enhanced-rc-nested {
